# VCK5000-YoloV3-SORT-Acceleration

./: .gitignore  CMakeLists.txt  README.md
docs/: VCK5000-es1-card-wiki.md  setting-up-vck5000&vitis-ai.md  thermal-modification-on-vck5000.md
models/yolov3_voc/: md5sum.txt
src/: test_video.cpp  yolov3-sort.cpp  yolov3-video.cpp  yolov3.cpp
